syntax = "proto3";

option csharp_namespace = "WebAPI.Controllers";

package getInfo;

service TokenController {
  rpc GetInfoByToken (Tokens) returns (GetInfoResult);
}

message Tokens {
  string AuthToken = 1;
  string RefreshToken = 2;
}

message GetInfoResult
{
	bool IsSucsess = 1;
	optional UserShortInfo info = 2;
	optional ErrorInfo Error = 3;
}

message UserShortInfo
{
	string userId = 4;
	int32 userRoleId = 5;
}

message ErrorInfo
{
	string Message = 6;
	string ErrorCode = 7;
}